@@ -1,5 +1,7 @@
 Version 4.0-4
 
+ o Removed the 'transform' arguments from as.data.frame.eff, and added type argument.  Removed transformation argument from Effect an added 'custom' argument as sub-arg to axes=list(y=list(custom=...)) in plot.eff 
+ 
  o Extend use of cex sub-args for x and y axes and lattice strips to plot.effpoly().
  
  o Avoid warnings when testing given.values == "default" or "equal".
